# setup sources
set(TARGET_SOURCES
	${DIR_SRC}/ContainerBuilder.cpp
	${DIR_SRC}/WindowFactoryImpl.cpp
	${DIR_SRC}/WindowImpl.cpp)

add_library(${TARGET_NAME} ${TARGET_SOURCES})
target_include_directories(${TARGET_NAME} PRIVATE ${DIR_INCLUDE})
target_link_libraries(${TARGET_NAME} CONAN_PKG::Grawlog CONAN_PKG::Guardog CONAN_PKG::Hypodermic CONAN_PKG::Pulsr.Core)

install(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
	LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
	ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
install(DIRECTORY ${DIR_INCLUDE}/
	DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME} COMPONENT Devel)
